--- a/etchASketch.html
+++ b/etchASketch.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-A-Sketch</title>
     <script src="./etchASketch.js" defer></script>
-    <style src="./etchASketch.css"></style>
+    <link rel="stylesheet" href="./etchASketch.css">
 </head>
 <body>
-    
+    <button id="btn1">Create Divs</button>
+    <div class="container"></div>
 </body>
 </html>
