--- a/etchASketch.html
+++ b/etchASketch.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./etchASketch.css">
 </head>
 <body>
-    <button id="btn1">Create Divs</button>
+    <button id="btn1"># of Squares</button>
     <div class="container"></div>
 </body>
 </html>
